--- a/css/template.css
+++ b/css/template.css
@@ -87,8 +87,19 @@ a:hover {
 
 .list-title {
 	font-weight:bolder;
-	font-size:18px;
+	font-size:20px;
+        padding-top:40px;
+        padding-bottom:40px;
 }
+
+
+.label-title {
+	font-weight:bolder;
+	font-size:18px;
+
+}
+
+
 
 .list-big-title {
 	font-weight:bolder;
